# template-rust

./: .clippy.toml  .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  format.yml  publish.yml
benches/: README.md  example_bench.rs
docs/: README.md
src/: lib.rs  main.rs
tests/: README.md  basic.rs
