# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

[package]
name = "ultralytics-template-rust"
version = "0.0.5"
edition = "2024" # use the latest stable edition for new projects
license = "AGPL-3.0-or-later"
description = "Ultralytics Rust project template showcasing a minimal library and binary layout."
repository = "https://github.com/ultralytics/template-rust"
homepage = "https://www.ultralytics.com/"
readme = "README.md"
rust-version = "1.91" # edition 2024 requires Rust >= 1.85; pin to a current stable for CI
keywords = ["ultralytics", "template", "ml", "ai", "yolo"]
categories = ["development-tools", "science", "computer-vision"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "example_bench"
harness = false
